objects/AOPS_Address_BSD_A__c.object
<CustomObject>
    <fields>
        <fullName>CCU009F_ADDL_SALESPERSON_IND__c</fullName>
        <label>CCU009F_ADDL_SALESPERSON_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_ADDRESS_SEQ__c</fullName>
        <label>CCU009F_ADDRESS_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_AOPD_FLAG__c</fullName>
        <label>CCU009F_AOPD_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_BACKORDER_ALLOW_FLAG__c</fullName>
        <label>CCU009F_BACKORDER_ALLOW_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_CONTRACT_CODE__c</fullName>
        <label>CCU009F_CONTRACT_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_COST_CODE__c</fullName>
        <label>CCU009F_COST_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_CREATE_DATE__c</fullName>
        <label>CCU009F_CREATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_CREATE_ID__c</fullName>
        <label>CCU009F_CREATE_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_CUSTOMER_ID__c</fullName>
        <label>CCU009F_CUSTOMER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_FAX_INV_CODE__c</fullName>
        <label>CCU009F_FAX_INV_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_FAX_PO_CODE__c</fullName>
        <label>CCU009F_FAX_PO_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_FAX_SHIP_CONFIRMATION__c</fullName>
        <label>CCU009F_FAX_SHIP_CONFIRMATION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_FILLER__c</fullName>
        <label>CCU009F_FILLER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_HEDBERG_ADDRESS_ID__c</fullName>
        <label>CCU009F_HEDBERG_ADDRESS_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_LAST_USED_DATE__c</fullName>
        <label>CCU009F_LAST_USED_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_LINE_LIMIT__c</fullName>
        <label>CCU009F_LINE_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_LOCATION_INDICATOR__c</fullName>
        <label>CCU009F_LOCATION_INDICATOR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_LOCATION_REQ_CODE__c</fullName>
        <label>CCU009F_LOCATION_REQ_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_MIN_DISCOUNT__c</fullName>
        <label>CCU009F_MIN_DISCOUNT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_MIN_GP_PERCENT__c</fullName>
        <label>CCU009F_MIN_GP_PERCENT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_OFF_CATALOG_DATE__c</fullName>
        <label>CCU009F_OFF_CATALOG_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_OFF_PRICE_CODE__c</fullName>
        <label>CCU009F_OFF_PRICE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_OFF_PRICE_PC__c</fullName>
        <label>CCU009F_OFF_PRICE_PC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_OFF_PRICE_ZONE__c</fullName>
        <label>CCU009F_OFF_PRICE_ZONE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_ORDER_LIMIT__c</fullName>
        <label>CCU009F_ORDER_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_ORDER_REST_IND__c</fullName>
        <label>CCU009F_ORDER_REST_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_PRICE_PLAN_SEQ__c</fullName>
        <label>CCU009F_PRICE_PLAN_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_PRICE_PLAN__c</fullName>
        <label>CCU009F_PRICE_PLAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_PUR_FAX_CONT_SEQ__c</fullName>
        <label>CCU009F_PUR_FAX_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_PUR_PHONE_CONT_SEQ__c</fullName>
        <label>CCU009F_PUR_PHONE_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_REPORT_DIST_FLAG__c</fullName>
        <label>CCU009F_REPORT_DIST_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_REPORT_DIST_ID__c</fullName>
        <label>CCU009F_REPORT_DIST_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_SALESPERSON_ID__c</fullName>
        <label>CCU009F_SALESPERSON_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_SHIP_TO_DOLLARS__c</fullName>
        <label>CCU009F_SHIP_TO_DOLLARS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_SHIP_TO_DOLLAR_EXPIRE__c</fullName>
        <label>CCU009F_SHIP_TO_DOLLAR_EXPIRE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_SHIP_TO_LIMIT__c</fullName>
        <label>CCU009F_SHIP_TO_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_TIME_STAMP__c</fullName>
        <label>CCU009F_TIME_STAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_UPDATE_DATE__c</fullName>
        <label>CCU009F_UPDATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_UPDATE_PROGRAM__c</fullName>
        <label>CCU009F_UPDATE_PROGRAM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_WHL_PRICE_CODE__c</fullName>
        <label>CCU009F_WHL_PRICE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU009F_WHL_PRICE_PC__c</fullName>
        <label>CCU009F_WHL_PRICE_PC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC009F_ACTION__c</fullName>
        <label>CXTC009F_ACTION</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC009F_AOPS_KEY1__c</fullName>
        <label>AOPS KEY1 Account/Prospect</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC009F_AOPS_KEY2__c</fullName>
        <label>AOPS KEY2 Address/Contact</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC009F_MSG_TYPE__c</fullName>
        <label>Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC009F_TIMESTAMP__c</fullName>
        <label>CXTC009F_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Address BSD Addendum</label>
    <nameField>
        <label>AOPS Address BSD A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Address BSD Addendum</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>